---
(4.2.4p6) 2009/01/08 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1113] Fixed build errors with recent versions of openSSL. 
* [Sec 1111] Fix incorrect check of EVP_VerifyFinal()'s return value.
* Update the copyright year.

---
(4.2.4p5) 2008/08/17 Released by Harlan Stenn <stenn@ntp.org>

* [BUG 1051] Month off by one in leap second message written to clockstats
  file fixed.
* [Bug 450] Windows only: Under original Windows NT we must not discard the
  wildcard socket to workaround a bug in NT's getsockname().
* [Bug 1038] Built-in getpass() function also prompts for password if
  not built with DEBUG.
* [Bug 841] Obsolete the "dynamic" keyword and make deferred binding
  to local interfaces the default.
  Emit a warning if that keyword is used for configuration.
* [Bug 959] Refclock on Windows not properly releasing recvbuffs.
* [Bug 993] Fix memory leak when fetching system messages.
* [Bug 987] Wake up the resolver thread/process when a new interface has
  become available.
* Correctly apply negative-sawtooth for oncore 12 channel receiver.
* Startup code for original LinuxPPS removed.  LinuxPPS now conforms to
  the PPSAPI.
* [Bug 1000] allow implicit receive buffer allocation for Windows.
  fixes startup for windows systems with many interfaces.
  reduces dropped packets on network bursts.
  additionally fix timer() starvation during high load.
* [Bug 990] drop minimum time restriction for interface update interval.
* [Bug 977] Fix mismatching #ifdefs for builds without IPv6.
* Update the copyright year.
* Build system cleanup (make autogen-generated files writable).
* [Bug 957] Windows only: Let command line parameters from the Windows SCM GUI
  override the standard parameters from the ImagePath registry key.
* Fixes for ntpdate:
* [Bug 532] nptdate timeout is too long if several servers are supplied.
* [Bug 698] timeBeginPeriod is called without timeEndPeriod in some NTP tools.
* [Bug 857] ntpdate debug mode adjusts system clock when it shouldn't.